# charging-ontology

./: .gitignore  .gitlab-ci.yml  404.html  LICENSE  Makefile  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: chio-ci.yaml  documentation.yml  paper-ci.yaml
about/: index.html
assets/: catalog.xml
docs/: about.md  gettingstarted.md  index.md  scenarios.md
gettingstarted/: index.html
paper/: Makefile  bibliography.bib  build.bat  paper.tex  paper_ceur.tex
paper/assets/: abstract.tex  keywords.tex
paper/sections/: achievement.tex  achievments.tex  acknowledgments.tex  conclusion.tex  context.tex  discussion.tex  introduction.tex  methodology.tex  oeo.tex  other_ontologies.tex  results.tex
scenarios/: index.html
scripts/: README.md  get-bfo.py  get-hermit.py  get-process-profile.py  get-robot.py
scripts/cco-imports/: ao_artifacts.txt  ao_facility.txt  ao_facility_classes.txt  ao_infrastructure.txt  ao_vehicles.txt  cco-extracted.sh  cco-top.txt  cco-w-hierarchy.txt  definition-mapping.tsv  eo_stasis.txt  extract-cco.py  geo_base.txt  geo_base_upper.txt  geo_tree.txt  ieo_ops.txt  ieo_ops_mappings.csv  prefix-mappings.tsv
scripts/oeo-imports/: extract-oeo.py  iao-dropped.txt  iao-extracted.sh  oeo-extracted.sh  oeo_grid.txt  oeo_vehicle.txt
scripts/ql-heuristic/: Cargo.toml
scripts/visualization/: chio-extract-viz.sh  chio_parking_viz.txt  convert_file_for_viz.py  (+7 more)
search/: search_index.json
src/: README.md  catalog-v001.xml  charging-ontology.ttl  chio.ttl
tests/: conftest.py  test_competency_questions.py
(+25 files in other folders)
