[tool.poetry]
name = "chio-dev"
version = "0.1.0"
description = "Development environment of charging infrastructure ontology"
authors = ["Arellano Ruiz, Eugenio Salvador <eugenio.arellanoruiz@dlr.de>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.11"
ipykernel = "^6.29.3"
pytest = "^8.0.2"


[tool.poetry.group.viz.dependencies]
py-horned-owl = "^0.3.2"
pygraphviz = {version = "^1.12", optional = true}


[tool.poetry.extras]
figures = ["pygraphviz"]

[tool.poetry.group.paper.dependencies]
pygments = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
